# check_ds

./: .dockerignore  .gitignore  Dockerfile  _append_js.py  docker-compose.yml  extract_contract_info.py  output.txt  pyproject.toml  run.py  ~$ДС №53.docx
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 502cd37b0210_initial.py
api/: main.py
api/routes/: acts.py  agreements.py  calculations.py  calendar.py  route_params_editor.py  summary.py  table_checks.py  table_checks_logic.py  upload.py
core/: config.py  constants.py  historical_stages.py  utils.py
core/calculator/: calendar.py  compare.py  export_excel.py  kilometers.py  price.py
core/checker/: db_checks.py  internal.py  km_checker.py  vysvobozhdenie_checker.py
core/parser/: act_docx.py  archive.py  docx_parser.py  extract.py  extract_contract_info.py  km_excel.py  parse_route_315_xls.py  vysvobozhdenie_parser.py
db/: database.py
db/models/: __init__.py  base.py  calendar.py  contracts.py  routes.py  stages.py
scripts/: import_route_end_dates.py  import_xlsx.py  migrate_add_stage_status.py  migrate_seasonal_routes.py
services/: contract_summary.py  stages_calculator.py
static/css/: style.css
static/js/: app.js  vysvobozhdenie-dialog.js
templates/: base.html  index.html
tests/: test_constants.py  test_internal_checker.py  test_kilometers.py  test_price.py  test_stages_calculator.py
